@@ -97,8 +97,8 @@ process_name={{component.name}}
     args = None
 
     def configure(self):
-        super(Eventlistener, self).configure()
-        self.events = ','.join(self.events)
+        if not isinstance(self.events, str):
+            self.events = ','.join(self.events)
         # Not sure what's right. We only use eventlisteners with superlance
         # which lives in the supervisor's workdir. However, the
         # EventListener component gets instanciated as a sub-component of
@@ -106,6 +106,7 @@ process_name={{component.name}}
         # to the superlance plugins. :/
         self.command = os.path.normpath(
            os.path.join(self.supervisor.workdir, self.command))
+        super(Eventlistener, self).configure()
 
 
 class Supervisor(Component):
